--- a/avo/nginx-proxy-manager/docker-compose.yml
+++ b/avo/nginx-proxy-manager/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   nginx-proxy-manager:
-    image: 'jc21/nginx-proxy-manager:latest'
+    image: 'jc21/nginx-proxy-manager:2.12.6'
     restart: unless-stopped
     ports:
       - '80:80'
