Nextcloud add local port

--- a/avo/nextcloud/docker-compose.yml
+++ b/avo/nextcloud/docker-compose.yml
@@ -63,6 +63,8 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - $STORAGE_DIR/web:/var/www/html
+    ports:
+      - "8808:80"
     networks:
       - ingress
 
