--- a/avo/nextcloud/.env
+++ b/avo/nextcloud/.env
@@ -1,5 +1,5 @@
-NEXTCLOUD_VERSION=28-fpm-alpine
-MARIA_DB_VERSION=10.5
+NEXTCLOUD_VERSION=32.0.3-fpm-alpine
+MARIA_DB_VERSION=11.8
 NGINX_VERSION=latest
 STORAGE_DIR=/home/docker/nextcloud
 DB_HOST=db
